22 Apr 2001 cmpsc fixes for expansion - Greg Smith
22 Apr 2001 Correct prefix alignment for ESA/390 
            guest in 64 bit mode SIE - Jan Jaeger
17 Apr 2001 Fix SSKE rcp guest ref and change bits - Paul Leisy
18 Apr 2001 Fix CPU TIMER interrupt processing - Jan Jaeger
17 Apr 2001 Device I/O thread throttling - Greg Smith & Fish
17 Apr 2001 Fix ISKE rcp index - Paul Leisy
16 Apr 2001 `-malign-double' removed from makefile - Greg Smith
16 Apr 2001 Read-track fix reintroduced after being deprecated - Greg Smith
16 Apr 2001 iobuf in channel.c is now malloc'ed to reduce out of
            memory errors under Cygwin - Greg Smith
16 Apr 2001 Reintroduced OPTION_NO_DEVICE_THREAD - Jan Jaeger
15 Apr 2001 featall.h: #define OPTION_NO_IEEE_SUPPORT for WIN32 builds
            (<fenv.h> has not been ported by CygWin yet)
13 Apr 2001 Correction to CVDG - Jan Jaeger
09 Apr 2001 Fix intlock access in clock and timer routines - Jan Jaeger
08 Apr 2001 Small optimization of vstore/vfetch - Jan Jaeger
08 Apr 2001 Correction to SIGP Set Architecture Mode - Jan Jaeger
08 Apr 2001 Small optimization of TPI - Jan Jaeger
08 Apr 2001 Correction to SCHM in 64 bit mode - Jan Jaeger
08 Apr 2001 Correction to TB in amode 64 - Jan Jaeger
06 Apr 2001 Read-track released dfwlock too soon when track found
            in dfw queue
04 Apr 2001 Sense/Set Path Group ID for DASD - Jan Jaeger
02 Apr 2001 Correction to register unstacking logic - Jan Jaeger
04 Apr 2001 #define MAX_DEVICE_THREAD_IDLE_SECS 300
02 Apr 2001 Fixed device_thread race condition in channel.c
02 Apr 2001 Added support for [Windows] External GUI
01 Apr 2001 Correction to Lock Page - Jan Jaeger
28 Mar 2001 Fix nullification problem in form_stack_entry - Jan Jaeger
27 Mar 2001 Fix exception access id in BSG - Jan Jaeger
27 Mar 2001 Fix exception access id during subspace replacement - Jan Jaeger
27 Mar 2001 Fix translation exception address in ESAME mode - Jan Jaeger